Body/Websites/HomePage/HomePage.css
main {
    /*background-color: #905617;*/
    background-image: url("../../../Images/light-brown-kraft-paper-texture-background_8087-1877.jpg");
    width: 90%;
    margin: -10px auto;
    justify-content: space-between;
    padding: 30px 0px 30px 0px;
    box-shadow: 0px 0px 10px black;
}

div {
    box-shadow: 0px 0px 5px black;
}

.imgcycle1 {
    display: flex;
    border-radius: 10px;
    background-image: url("../../../Images/background_nature.png");
    background-repeat: no-repeat;
    background-size: 100%;
    width: 70%;
    margin: 0 auto;
}

.elementToFadeInAndOut {
    width:600px;
    height: 250px;
    -webkit-animation: fadeinout 5s linear forwards;
    animation: fadeinout 5s linear forwards;
    opacity: 0;
}

@-webkit-keyframes fadeinout {
    0%, 100% { opacity: 0; }
    25%, 75% { opacity: 1; }
}

@keyframes fadeinout {
    0%, 100% { opacity: 0; }
    25%, 75% { opacity: 1; }
}

#bone {
    position: relative;
    display: flex;
    width: 60%;
}

.Quotediv {
    background-color: inherit;
    display: flex;
    border-radius: 10px;
    width: 80%;
    margin: 0 auto;
    margin-top: 20px;
}

#Quote {
    margin: 0 auto;
    margin-top: 20px;
    margin-bottom: 20px;
    text-align: justify;
    padding: 10px 50px;
    font-size: 20px;
}

